#10000# java 1.3